--- a/style.css
+++ b/style.css
@@ -1,1 +1,44 @@
-/* Test */
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+
+.grid-container {
+    height: 100%;
+    display: grid;
+    grid-template: 1fr 5fr / 1fr 5fr;
+    grid-template-areas: "sidebar header" "sidebar content";
+}
+
+/* Sidebar */
+.sidebar {
+    grid-area: sidebar;
+    display: grid;
+    grid-template: 1fr 2fr 4fr / 1fr;
+}
+
+.sidebar .nav1 {
+    grid-row: 2 / 3;
+}
+
+.sidebar .nav2 {
+    grid-row: 3 / 4;
+}
+/* End Sidebar */
+
+/* Header */
+.header {
+    grid-area: header;
+    display: grid;
+    grid-template: 1fr 1fr / 2fr 1fr;
+}
+
+/* End Header */
+
+/* Main content */
+.main-content {
+    grid-area: content;
+}
+
+/* End Main content */
