--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body, html {
     height: 100%;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 ul, h1 {
@@ -13,6 +16,7 @@ ul {
 
 a {
     text-decoration: none;
+    color: white;
 }
 
 .grid-container {
@@ -28,6 +32,7 @@ a {
     display: grid;
     grid-template: 1fr 2fr 1fr 3fr / 1fr;
     background-color: #3b82f6;
+    color: white;
 }
 
 .sidebar .sidebar-title {
