--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body, html {
     height: 100%;
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    font-size: 1.2em;
 }
 
 ul, h1 {
@@ -68,25 +69,25 @@ ul > li, nav > h1 {
     border: 1px solid red;
 }
 
-.searchbar {
-    grid-row: 1 / 2;
+.header-left-panel {
+    grid-row: 1 / 3;
     grid-column: 1 / 2;
-    align-self: center;
+    display: grid;
+    grid-template: 1fr 1fr / 0.25fr 0.35fr 1fr 1fr;
+    align-items: center;
 }
 
-.search-container {
-    position: relative;
-    width: 800px;
-    justify-content: left;
-    display: flex;
-    padding-left: 100px ;
+ .searchbar {
+    grid-row: 1 / 1;
+    grid-column: 2 / 5;
+    text-align: left;
+    padding-left: 30px;
 }
 
 input[type="search"] {
-    /* display: inline; */
     appearance: none;
-    width: 70%;
-    height: 25px;
+    width: 90%;
+    height: 35px;
     padding: 0 0.5em;
     border: none;
     border-radius: 20px;
@@ -111,20 +112,19 @@ input[type="search"] + div:before {
     width: 24px;
     height: 24px;
     position: absolute;
-    left: -585px;
-    top: 1px;
+    left: -33px;
+    top: -29px;
 }
 
 .greeting {
     grid-row: 2 / 3;
-    grid-column: 1 / 2;
-    display: grid;
-    grid-template: 1fr / 1fr 1fr 4fr;
-    align-items: center;
+    grid-column: 3 / 5;
+    text-align: left;
 }
 
 .circle {
-    grid-column: 2 / span 1;
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
     display: flex;
     border: 1px solid #fbbf24;
     background-color: #fbbf24;
