--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+* {
+    box-sizing: border-box;
+}
 body, html {
     height: 100%;
     margin: 0;
@@ -66,7 +69,9 @@ ul > li, nav > h1 {
     display: grid;
     grid-template: 1fr 1fr / 2fr 1fr;
     text-align: center;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    box-shadow: 5px 7px 4px 0px rgba(209,213,219,1);
+    z-index: 100;
 }
 
 .header-left-panel {
@@ -75,6 +80,15 @@ ul > li, nav > h1 {
     display: grid;
     grid-template: 1fr 1fr / 0.25fr 0.35fr 1fr 1fr;
     align-items: center;
+}
+
+.header-right-panel {
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template: 1fr 1fr / 1fr;
+    align-items: center;
+    /* column-gap: 20px; */
 }
 
  .searchbar {
@@ -122,27 +136,68 @@ input[type="search"] + div:before {
     text-align: left;
 }
 
-.circle {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
+.circle, .circle-small {
     display: flex;
     border: 1px solid #fbbf24;
     background-color: #fbbf24;
     border-radius: 50%;
-    height: 75px;
-    width: 75px;
     align-items: center;
     justify-content: center;
 }
 
+.circle {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    /* display: flex;
+    border: 1px solid #fbbf24;
+    background-color: #fbbf24;
+    border-radius: 50%; */
+    height: 75px;
+    width: 75px;
+    /* align-items: center; */
+    /* justify-content: center; */
+}
+
+.circle-small {
+    height: 50px;
+    width: 50px;
+}
+
+
+
 .notifications {
     grid-row: 1 / 2;
+    display: grid;
+    grid-template-columns: 0.5fr 0.25fr 0.35fr 1fr;
+    align-items: center;
+}
+
+.bell {
     grid-column: 2 / 3;
+}
+
+.user-handle {
+    text-align: left;
+    grid-column: 4 / 5;
 }
 
 .buttons {
     grid-row: 2 / 3;
-    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; 
+    column-gap: 10px;
+}
+
+.btn {
+    font-style: inherit;
+    font-size: 80%;
+    color: white;
+    appearance: none;
+    width: 95%;
+    height: 50px;
+    border: none;
+    background-color: #3b82f6;
+    border-radius: 25px;
 }
 /* End Header */
 
@@ -151,6 +206,7 @@ input[type="search"] + div:before {
     grid-area: content;
     display: grid;
     grid-template: 1fr 1fr / 2fr 1fr;
+    background-color: #e5e7eb;
 }
 
 .projects {
